--- a/uploadpage/upload.css
+++ b/uploadpage/upload.css
@@ -1,22 +1,25 @@
-/*header
-{
-  width: 100%;
-  height: 100%;
-  background: url('https://raw.githubusercontent.com/hudsonmarinho/header-and-footer-parallax-effect/master/assets/images/bg-header.jpg') no-repeat 50% 50%;
-  top: 0;
-  position: fixed;
-  z-index: -1;
-}
 
-/*body{
-    background:url('http://www.wallpaperup.com/uploads/wallpapers/2012/10/21/20181/cad2441dd3252cf53f12154412286ba0.jpg');
-    padding:50px;
-}
-
-*/
 header{
   width: 100%;
   height: 100%;
   background: url(https://raw.githubusercontent.com/hudsonmarinho/header-and-footer-parallax-effect/master/assets/images/bg-header.jpg) no-repeat 50% 50%;
 }
 
+/*body.center{
+  text-align: center;
+}
+*/
+div div{
+  margin: 0 auto;
+  display: flex;
+}
+
+form{
+  margin: auto;
+}
+
+.mb-4{
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
