--- a/uploadpage/upload.css
+++ b/uploadpage/upload.css
@@ -23,3 +23,16 @@ form{
   margin-left:auto;
   margin-right:auto;
 }
+#map {
+  height: 50px;  /* The height is 400 pixels */
+  width: 30%;  /* The width is the width of the web page */
+ }
+
+ #language{
+   color:black;
+   width: 250px;
+ }
+
+ #spelling{
+   width: 250px;
+ }
