--- a/uploadpage/upload.css
+++ b/uploadpage/upload.css
@@ -10,7 +10,7 @@ header{
 }
 */
 div.forms{
-  height: 500px;
+  height: 100%;
   width: 100%;
   background: url(https://raw.githubusercontent.com/hudsonmarinho/header-and-footer-parallax-effect/master/assets/images/bg-header.jpg) no-repeat 50% 50%;
 }
@@ -43,6 +43,9 @@ form{
 
  #city{
    width:250px;
+ }
+ #submit{
+   color:black;
  }
  html{
    height:100%;
